# aoc-rust

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
benches/: bench.rs
data/year2022/day01/: puzzle.md
data/year2022/day03/: puzzle.md
data/year2022/day04/: puzzle.md
data/year2022/day06/: puzzle.md
data/year2022/day07/: puzzle.md
data/year2022/day08/: puzzle.md
data/year2023/day01/: puzzle.md
data/year2023/day02/: puzzle.md
data/year2023/day03/: puzzle.md
data/year2023/day04/: puzzle.md
data/year2023/day05/: puzzle.md
data/year2023/day07/: puzzle.md
data/year2023/day08/: puzzle.md
data/year2023/day09/: puzzle.md
data/year2023/day10/: puzzle.md
data/year2023/day11/: puzzle.md
data/year2023/day12/: puzzle.md
data/year2023/day13/: puzzle.md
data/year2023/day14/: puzzle.md
data/year2023/day15/: puzzle.md
data/year2023/day16/: puzzle.md
data/year2023/day17/: puzzle.md
data/year2023/day18/: puzzle.md
data/year2023/day19/: puzzle.md
data/year2023/day20/: example2
data/year2023/day21/: puzzle.md
data/year2023/day22/: puzzle.md
data/year2024/day01/: puzzle.md
data/year2024/day02/: puzzle.md
data/year2024/day03/: puzzle.md
data/year2024/day04/: puzzle.md
data/year2024/day05/: puzzle.md
data/year2024/day06/: puzzle.md
data/year2024/day07/: puzzle.md
data/year2024/day08/: puzzle.md
data/year2025/day01/: puzzle.md
data/year2025/day02/: puzzle.md
data/year2025/day03/: puzzle.md
data/year2025/day04/: puzzle.md
data/year2025/day05/: puzzle.md
data/year2025/day06/: puzzle.md
data/year2025/day07/: puzzle.md
data/year2025/day08/: puzzle.md
data/year2025/day09/: puzzle.md
data/year2025/day10/: puzzle.md
data/year2025/day11/: puzzle.md
src/: challenge.rs  grid.rs  input.rs  lib.rs  main.rs  template.rs  testing.rs
src/utils/: f64_conversions.rs  grid.rs  mod.rs  point3.rs
src/year2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  mod.rs
src/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
