[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"
description = "Advent of Code in Rust"
license = "MIT"
repository = "https://github.com/sebdotv/aoc-rust"
keywords = ["advent-of-code", "aoc", "rust"]

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
hex = "0.4.3"
indexmap = "2.1.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
num_enum = "0.7.1"
pathfinding = "4.8.0"
polyfit-rs = "0.2.1"
regex = "1.10.2"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"

[dev-dependencies]
criterion = "0.5.1"
indoc = "2.0.4"

[profile.release]
debug = 1 # to profile a release build effectively you might need to enable source line debug info

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = 0 }
enum_glob_use = { level = "allow", priority = 1 } # part of pedantic
missing_errors_doc = { level = "allow", priority = 1 } # part of pedantic
must_use_candidate = { level = "allow", priority = 1 } # part of pedantic
uninlined_format_args = { level = "allow", priority = 1 } # part of pedantic
unreadable_literal = { level = "allow", priority = 1 } # part of pedantic
unnecessary_wraps = { level = "allow", priority = 1 } # part of pedantic
cargo = { level = "warn", priority = 0 }
cargo_common_metadata = { level = "allow", priority = 1 } # part of cargo
multiple_crate_versions = { level = "allow", priority = 1 } # part of cargo
