[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2024"
description = "Advent of Code in Rust"
license = "MIT"
repository = "https://github.com/sebdotv/aoc-rust"
keywords = ["advent-of-code", "aoc", "rust"]

[features]
previous-years = []

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
colored = "3.0.0"
indexmap = "2.1.0"
itertools = "0.14.0"
nom = "8.0.0"
nom_locate = "5.0.0"
nonempty = "0.12.0"
num_enum = "0.7.1"
pathfinding = "4.8.0"
polyfit-rs = "0.2.1"
regex = "1.10.2"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.3"

[dev-dependencies]
criterion = "0.8.0"
indoc = "2.0.4"

[profile.release]
debug = 1 # to profile a release build effectively you might need to enable source line debug info

[[bench]]
name = "bench"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = 0 }
enum_glob_use = { level = "allow", priority = 1 } # part of pedantic
missing_errors_doc = { level = "allow", priority = 1 } # part of pedantic
must_use_candidate = { level = "allow", priority = 1 } # part of pedantic
uninlined_format_args = { level = "allow", priority = 1 } # part of pedantic
unreadable_literal = { level = "allow", priority = 1 } # part of pedantic
unnecessary_wraps = { level = "allow", priority = 1 } # part of pedantic

clone_on_ref_ptr = { level = "warn", priority = 0 } # part of restriction
impl_trait_in_params = { level = "warn", priority = 0 } # part of restriction
iter_over_hash_type = { level = "warn", priority = 0 } # part of restriction
let_underscore_untyped = { level = "warn", priority = 0 } # part of restriction
map_err_ignore = { level = "warn", priority = 0 } # part of restriction
multiple_inherent_impl = { level = "warn", priority = 0 } # part of restriction
ref_patterns = { level = "warn", priority = 0 } # part of restriction
renamed_function_params = { level = "warn", priority = 0 } # part of restriction
str_to_string = { level = "warn", priority = 0 } # part of restriction

cargo = { level = "warn", priority = 0 }
cargo_common_metadata = { level = "allow", priority = 1 } # part of cargo
multiple_crate_versions = { level = "allow", priority = 1 } # part of cargo
